--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,18 @@
-#mapLocations {
-  margin: 20px;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
+  background-color: #E8F8F5;
+}
+h1, h3, h4 {
+  font-family: 'Modern Antiqua', cursive;
+  text-align: center;
+  color: #CB4335;
+}
+img {
+  margin:10px auto;
+	display:block;
 }
